--- a/static/welcome.html
+++ b/static/welcome.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
     <link rel="stylesheet" href="/static/styles.css">
   </head>
@@ -10,7 +11,7 @@
     <div id="content">
       <div id="welcome">Welcome to Healthcare Chatbot</div>
       <br>
-      <a href="/index"><button class="welcomeBtn">Continue</button></a>
+      <a href="/static/index.html"><button class="welcomeBtn">Continue</button></a>
     </div>
   </div>
   </body>
